@@ -4,6 +4,7 @@ import com.finddr.dto.GlobalSearchResponseDto;
 import com.finddr.entity.Clinic;
 import com.finddr.entity.Doctor;
 import com.finddr.entity.Speciality;
+import com.finddr.entity.type.SearchType;
 import com.finddr.repository.ClinicRepository;
 import com.finddr.repository.DoctorRepository;
 import com.finddr.repository.SpecialityRepository;
@@ -11,8 +12,8 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -23,51 +24,58 @@ public class SearchService {
   private final ClinicRepository clinicRepository;
   private final SpecialityRepository specialityRepository;
 
-  public GlobalSearchResponseDto performGlobalSearch(String city, String query) {
-    GlobalSearchResponseDto response = new GlobalSearchResponseDto();
+  public List<GlobalSearchResponseDto> performGlobalSearch(String city, String query) {
+    List<GlobalSearchResponseDto> response = new ArrayList<>();
 
     // If there's a query term, perform the searches
     if (query != null && !query.trim().isEmpty()) {
       // Search for doctors in the given city
       List<Doctor> doctors = doctorRepository.searchByCityAndName(city, query);
-      response.setDoctors(mapDoctorsToSearchResult(doctors));
-
       // Search for clinics in the given city
       List<Clinic> clinics = clinicRepository.searchByCityAndName(city, query);
-      response.setClinics(mapClinicsToSearchResult(clinics));
-
       // Search for specialities (not filtered by city)
       List<Speciality> specialities = specialityRepository.searchByName(query);
-      response.setSpecialities(mapSpecialitiesToSearchResult(specialities));
+
+      response.addAll(mapDoctorsToSearchResult(doctors));
+      response.addAll(mapClinicsToSearchResult(clinics));
+      response.addAll(mapSpecialitiesToSearchResult(specialities));
     }
 
     return response;
   }
 
-  private List<GlobalSearchResponseDto.SearchResultDto> mapDoctorsToSearchResult(List<Doctor> doctors) {
+  private List<GlobalSearchResponseDto> mapDoctorsToSearchResult(List<Doctor> doctors) {
     return doctors.stream().map(doctor -> {
-      GlobalSearchResponseDto.SearchResultDto dto = new GlobalSearchResponseDto.SearchResultDto();
+      GlobalSearchResponseDto dto = new GlobalSearchResponseDto();
       dto.setId(doctor.getId());
-      dto.setName(doctor.getUser().getFullName());
+      dto.setLabel(doctor.getUser().getFullName());
+      dto.setValue( doctor.getUser().getFullName()+"_"+doctor.getId());
+      dto.setType(SearchType.DOCTOR);
+      if ( doctor.getUser().getProfileImg() != null)
+        dto.setImgUrl(doctor.getUser().getProfileImg());
       return dto;
     }).toList();
   }
 
-  private List<GlobalSearchResponseDto.SearchResultDto> mapClinicsToSearchResult(List<Clinic> clinics) {
+  private List<GlobalSearchResponseDto> mapClinicsToSearchResult(List<Clinic> clinics) {
     return clinics.stream().map(clinic -> {
-      GlobalSearchResponseDto.SearchResultDto dto = new GlobalSearchResponseDto.SearchResultDto();
+      GlobalSearchResponseDto dto = new GlobalSearchResponseDto();
       dto.setId(clinic.getId());
-      dto.setName(clinic.getName());
+      dto.setLabel(clinic.getName());
+      dto.setValue(clinic.getName()+"_"+clinic.getId());
+      dto.setType(SearchType.CLINIC);
       return dto;
     }).toList();
   }
 
-  private List<GlobalSearchResponseDto.SearchResultDto> mapSpecialitiesToSearchResult(List<Speciality> specialities) {
+  private List<GlobalSearchResponseDto> mapSpecialitiesToSearchResult(List<Speciality> specialities) {
     return specialities.stream().map(speciality -> {
-      GlobalSearchResponseDto.SearchResultDto dto = new GlobalSearchResponseDto.SearchResultDto();
+      GlobalSearchResponseDto dto = new GlobalSearchResponseDto();
       dto.setId(speciality.getId());
-      dto.setName(speciality.getName());
+      dto.setLabel(speciality.getName());
+      dto.setValue(speciality.getName()+"_"+speciality.getId());
+      dto.setType(SearchType.SPECIALITY);
       return dto;
-    }).collect(Collectors.toList());
+    }).toList();
   }
 }
